<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patterned_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Location_Name"
        android:layout_width="239dp"
        android:layout_height="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/location_name_default_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Temperature"
        android:layout_width="178dp"
        android:layout_height="74dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/temperature_default_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location_Name" />

    <ImageView
        android:id="@+id/Weather_Image"
        android:layout_width="124dp"
        android:layout_height="138dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Weather_Conditions" />

    <TextView
        android:id="@+id/Weather_Conditions"
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/weather_condition_default_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Temperature" />

    <TextView
        android:id="@+id/Sunrise_Time"
        android:layout_width="132dp"
        android:layout_height="25dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="140dp"
        android:text="@string/sunrise_default_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Weather_Conditions" />

    <TextView
        android:id="@+id/Sunset_Time"
        android:layout_width="131dp"
        android:layout_height="22dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="4dp"
        android:text="@string/sunset_default_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sunrise_Time" />

    <EditText
        android:id="@+id/City_Name_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/city_name_input_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sunset_Time" />

    <Button
        android:id="@+id/Init_Weather"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="12dp"
        android:text="@string/see_weather_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/City_Name_Input" />

    <TextView
        android:id="@+id/Input_Error"
        android:layout_width="203dp"
        android:layout_height="24dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/input_error_text"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Init_Weather" />


</androidx.constraintlayout.widget.ConstraintLayout>